ShopService: implemented functionalities for products and comments

--- a/ShopService/src/main/resources/application.properties
+++ b/ShopService/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:sqlserver://localhost:1470;databaseName=shopDB;integratedSecurity=false;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=Str0ng!password
+server.port=14001
+spring.mvc.format.date=iso
