--- a/e-commerce-frontend/Dockerfile
+++ b/e-commerce-frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.20.2-alpine
 
-COPY dist /usr/share/nginx/html
+COPY dist/e-commerce-frontend /usr/share/nginx/html
 
 COPY docker-resources/nginx/default.conf /etc/nginx/conf.d/default.conf
 
